--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ collections:
         output: true
     awards:
         output: true
+    projects:
+        output: true
 
 defaults:
     - scope:
