--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,11 @@ defaults:
         path: ""
       values:
         layout: "default"
+    - scope:
+        path: ""
+        type: "posts"
+      values:
+        layout: "post"
 
 baseurl: /portfolio
 
