Url added to config.

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ defaults:
         layout: "certificate"
 
 baseurl: /portfolio
+url: "https://pushkarkadam.github.io"
 
 plugins:
     - jekyll-feed
