--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@
   link: /experience.html
 - name: Education
   link: /education.html
+- name: Publications
+  link: /publications.html
 - name: Certificates
   link: /certificates.html
 - name: Projects
